--- a/ABMDesktopUI.Library/ABMDesktopUI.Library.csproj
+++ b/ABMDesktopUI.Library/ABMDesktopUI.Library.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Api\IAPIHelper.cs" />
     <Compile Include="Api\IProductApi.cs" />
     <Compile Include="Api\ProductApi.cs" />
+    <Compile Include="Helpers\ConfigHelper.cs" />
+    <Compile Include="Helpers\IConfigHelper.cs" />
     <Compile Include="Models\AuthenticatedUser.cs" />
     <Compile Include="Models\CartProductModel.cs" />
     <Compile Include="Models\ILoggedInUserModel.cs" />
